<resources>

    <string name="app_name">TimTool</string>
    <string name="simple_desc">Tim功能性Xposed模块</string>

    <string name="setting_message">模块版本:%s %s版本:%s</string>

    <string name="build_info">
        构建版本：%s\n
        构建时间：%s\n
    </string>

    <string name="telegram">Telegram</string>

    <string name="github">Github</string>

    <string name="ok">确认</string>
    <string name="loading">加载中...</string>
    <string name="update_toast">[TimTool]有新版本</string>
    <string name="update_title">有新更新 v</string>
    <string name="to_update">去更新</string>
    <string name="is_force_update">不能取消,你必须要更新</string>
    <string name="next">下次再说</string>

    <string name="message_bubbles_rounded_title">修改消息气泡圆角度</string>
    <string name="message_bubbles_rounded_text">许你一个美好的明天，愿世间的每一个角落都洒满璀璨的星光</string>
    <string name="double_click_repeat">双击复读</string>
    <string name="show_in_menu">显示在长按菜单</string>
    <string name="repeat_icon_size">复读图标大小</string>

    <string name="time_format">时间格式</string>
    <string name="time_size">大小(dp)</string>
    <string name="view_update_log">历史更新日志</string>

    <string name="hide_icon">隐藏桌面图标</string>

    <string name="me_daytime_bubble">自己-常规模式</string>
    <string name="me_dark_bubble">自己-深色模式</string>
    <string name="target_daytime_bubble">对方-常规模式</string>
    <string name="target_dark_bubble">对方-深色模式</string>

    <string name="preface">感谢使用此模块</string>
    <string name="sponsor">
        赞助20\n
        您可为此项目赞助 以获得此模块的最新功能和完整功能\n
        确保当前登录QQ是预期更新权限的账号(不赞助也可以正常使用，你的支持是此模块维护的动力）\n
        赞助后此弹窗将不会出现
    </string>
</resources>