<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".app.activity.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        app:cardBackgroundColor="@color/bigcard"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/iv_app_icon"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:icon="@drawable/ic_verified"
                app:iconSize="36dp"
                app:iconGravity="textTop"
                app:iconPadding="0dp"
                style="Widget.Material3.Button.IconButton.Filled"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/text_color"
                android:textSize="26sp"
                android:layout_marginTop="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_app_icon"/>

            <TextView
                android:id="@+id/tv_simple_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simple_desc"
                android:textColor="@color/text_color"
                android:layout_marginTop="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_app_name"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        app:cardBackgroundColor="@color/cardbg"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:id="@+id/ll_to_telegram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="onTelegramClick"
            android:orientation="horizontal"
            android:padding="25dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/github"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_telegram_fill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/telegram"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        app:cardBackgroundColor="@color/cardbg"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:id="@+id/ll_to_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="onGithubClick"
            android:orientation="horizontal"
            android:padding="25dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/github"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/github"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        app:cardBackgroundColor="@color/cardbg"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:id="@+id/ll_show_update_log_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="onClickShowUpdateLogDialog"
            android:orientation="horizontal"
            android:padding="25dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/github"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_log" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/view_update_log"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <CheckBox
        android:id="@+id/cb_hide_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hide_icon" />

    <TextView
        android:id="@+id/tv_build_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/build_info"
        android:textSize="15sp" />


</LinearLayout>